Consolidate defaults | plutils helpers